--- a/content/publication/journal-article/cite.bib
+++ b/content/publication/journal-article/cite.bib
@@ -1,8 +1,8 @@
 @article{example2,
-  title = {An example journal article},
-  author={Bighetti, Nelson and Ford, Robert},
-  journal = {Journal of Source Themes},
-  year    = 2015,
-  volume  = 1,
+  title = {An Online Support Vector Machine Algorithm for Dynamic Social Network Monitoring},
+  author={Karami, Arya and Niaki, Seyed Taghi Akhavan},
+  journal = {Neural Networks},
+  year    = 2023,
+  volume  = 171,
   number  = 1
 }
